--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,4 +17,75 @@ body {
   padding: 8px;
   max-width: 320px;
   margin-bottom: 16px;
+
+  /* styles for input */
+  margin-left: 40px;
+  
+  /* color: #0f1d4e;
+  background-color: #d9e5fc; */
+  text-shadow: 1px 1px 0 #fff;
+  outline: transparent;
+  border: 0 solid #e2e8f0;
+  border-radius: 10px;
+  box-shadow: -2px -2px 5px #fff, 2px 2px 5px #babecc;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+#search-box:hover,
+#search-box:focus {
+  box-shadow: -5px -5px 20px #fff, 5px 5px 20px #babecc;
+}
+
+/* styles for the list of countries */
+.country-list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+
+  list-style: none;
+  margin: 0;
+}
+
+.country-list__item {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.country-list__item--flag {
+  width: 40px;
+}
+
+.country-list__item--name {
+  margin: 0;
+  font-size: 20px;
+}
+
+/* styles for country information */
+.country-info__list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+
+  list-style: none;
+  margin: 0;
+}
+
+.country-info__item {
+  display: flex;
+  align-items: center;
+}
+
+.country-info__item--flag {
+  width: 100px;
+  margin-right: 10px;
+}
+
+.country-info__item--name {
+  font-size: 30px;
+}
+
+.country-info__item--categories {
+  font-weight: bold;
+  margin-right: 5px;
 }
